name:                very-circle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/croyzor/very-circle#readme
license:             BSD3
license-file:        LICENSE
author:              Craig Roy
maintainer:          craigr63@gmail.com
copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable very-circle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Colours, Config, Types, Drawing
  build-depends:       base >= 4.7 && < 5, elerea == 2.9.0, sdl2 == 2.2.0, helm == 1.0.0, linear
